# simple-raft

./: Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  config_2.yaml  config_3.yaml  docker-compose.yml
proto/: calculator.proto  raft_services.proto
src/: client.rs  consensus.rs  hash_table.rs  main.rs  parser.rs  proto.rs  server.rs  state.rs  validator.rs
