[package]
name = "simple-raft"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"


