[package]
name = "simple-raft"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
prost = "0.12"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "=1.0.142"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"
uuid = { version = "1.17.0", features = ["v4","serde"] }   

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"


